--- a/public/css/app.css
+++ b/public/css/app.css
@@ -139,22 +139,186 @@
   padding: 40px;
 }
 
+/* Login and registration modal and content design */
+
+#registration-modal .modal-dialog,
+#login-modal .modal-dialog {
+  max-width: 400px !important;
+}
+
+#registration-modal .modal-content,
+#login-modal .modal-content {
+  max-width: 400px;
+}
+
+label.input-label {
+  display: block;
+  font-family: 'Raleway';
+  font-size: 14px;
+  color: #333333;
+  font-weight: 700;
+  margin-bottom: 3px;
+}
+
+.auth-modal-header,
+.auth-modal-footer {
+  background: #F1F1F1;
+  padding: 15px 10px !important;
+  font-family: 'Raleway';
+}
+
+.auth-modal-header .modal-title,
+.auth-modal-footer .modal-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: auto !important;
+}
+
+.auth-modal-footer {
+  font-size: 16px;
+  text-align: center;
+  display: block !important;
+  border-radius: 0 0 4px 4px;
+}
+
+.auth-modal-footer a {
+  color: #ef294a;
+  font-weight: bold;
+}
+
+.group-input {
+  width: 100%;
+  position: relative;
+  background: #F1F1F1;
+  border: solid 1px #D8D8D8;
+  border-radius: 4px;
+}
+
+.group-input .input-icon {
+  width: 40px;
+  padding: 7px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  text-align: center;
+  color: #999999;
+}
+
+.group-input .input-icon:before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  bottom: 5px;
+  right: 1px;
+  width: 1px;
+  background: #D8D8D8;
+}
+
+.group-input .input-inner {
+  border: none;
+  display: inline-block;
+  background: transparent;
+  padding: 7px;
+  width: calc(100% - 45px);
+  vertical-align: top;
+}
+
+.group-input .input-inner:hover,
+.group-input .input-inner:focus {
+  outline: none;
+}
+
+.or-text {
+  margin: 10px 0 20px 0;
+  height: 2px;
+  background: #f1f1f1;
+  position: relative;
+}
+
+.or-text:before {
+  position: absolute;
+  content: 'OR';
+  border-radius: 50px;
+  background: #ffffff;
+  top: -8px;
+  left: 44%;
+  padding: 0px 7px 4px 7px;
+  color: #555555;
+  font-size: 12px;
+}
+
+.hints {
+  font-size: 14px;
+  font-family: 'Railway';
+}
+
 /* Button design for edutube */
 
 .primary-btn {
   color: #fff !important;
-  font-size: 15px;
+  font-weight: bold !important;
   background-color: #ef294a;
-  border-radius: 3px;
-  padding: 5px 24px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.25) !important;
 }
 
 .primary-btn:hover {
   color: #fff;
   cursor: pointer;
   text-decoration: none;
-  border-bottom: 2px solid #ef294a;
+  border-bottom: 2px solid #ef294a !important;
+}
+
+.default-btn {
+  color: #333333 !important;
+  font-weight: bold !important;
+  background-color: #f1f1f1;
+  border-bottom: 2px solid rgba(200, 200, 200, 0.25) !important;
+}
+
+.default-btn:hover {
+  color: #333333;
+  cursor: pointer;
+  text-decoration: none;
+  border-bottom: 2px solid #f1f1f1 !important;
+}
+
+.facebook-btn {
+  color: #ffffff !important;
+  background-color: #494492;
+  border-bottom: 2px solid #3E3979 !important;
+  text-align: left !important;
+}
+
+.facebook-btn:hover {
+  cursor: pointer;
+  text-decoration: none;
+  border-bottom: 2px solid #3E3979 !important;
+}
+
+.facebook-btn .icon {
+  display: inline-block;
+  margin-right: 25px;
+  font-weight: bold;
+}
+
+.google-btn {
+  color: #333333 !important;
+  background-color: #f1f1f1;
+  border-bottom: 2px solid rgba(200, 200, 200, 0.25) !important;
+  text-align: left !important;
+}
+
+.google-btn:hover {
+  color: #333333;
+  cursor: pointer;
+  text-decoration: none;
+  border-bottom: 2px solid #f1f1f1 !important;
+}
+
+.google-btn .icon {
+  display: inline-block;
+  margin-right: 25px;
+  font-weight: bold;
 }
 
 .btn-size-2x {
@@ -194,14 +358,11 @@
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.auth-modal-header,
-.auth-modal-footer {
-  background: #F1F1F1;
-  padding: 0.7rem 1rem !important;
+.right-menu-container li {
+  margin-right: 10px;
 }
 
-#registration-modal .form-group label.input-label,
-#login-modal .form-group label.input-label {
-  display: block;
+.right-menu-container li:last-child {
+  margin-right: 0;
 }
 
