--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,17 +12,11 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-.auth-modal-header,
-.auth-modal-footer {
-	background: #F1F1F1;
-	padding: 0.7rem 1rem !important;
-}
-
-#registration-modal,
-#login-modal {
-	.form-group {
-		label.input-label {
-          display: block;
+.right-menu-container {
+	li {
+		margin-right: 10px;
+		&:last-child {
+			margin-right: 0;
 		}
 	}
 }
