--- a/resources/assets/sass/public.scss
+++ b/resources/assets/sass/public.scss
@@ -3,6 +3,13 @@
   font-family: 'Railway';
 }
 
+.primary-header {
+  font-weight: bold;
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
 /* Button design for edutube */
 .primary-btn {
   color: $white !important;
