--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -24,3 +24,9 @@ $ash: $ash-shadow;
 $pink: $primary-btn;
 $deep-pink: $pink-shadow;
 $off-black: $icon-color;
+
+/* Social icon color */
+$facebook: #3b5998;
+$twitter: #1da1f2;
+$youtube: #ff0000;
+$linkedin: #007bb5;
