--- a/public/css/app.css
+++ b/public/css/app.css
@@ -393,6 +393,7 @@ label.input-label {
 }
 
 .question-blog .question-blog-container .question-blog-row .left-col h4 {
+  padding-top: 25px;
   font-size: 16px;
   font-weight: bold;
 }
