--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -367,6 +367,7 @@ label {
         padding-bottom: 35px;
         min-height: 310px;
         h4 {
+          padding-top: 25px;
           font-size: 16px;
           font-weight: bold;
         }
