--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -15,7 +15,7 @@ $icon-color: #3a3a3a;
 $ash-shadow: #a3a3a3;
 $primary-btn: #ef294a;
 $pink-shadow: #d01e3c;
-$boder-color: #e2e2e2;
+$boder-color: #ececec;
 
 /* Color name declaration */
 $white: $primary-color;
