--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -3,10 +3,32 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "variables";
+
+/* Bootstrap customization */
+.edutube-navbar-brand {
+  font-weight: bold;
+  font-size: 18px !important;
+  letter-spacing: 1px;
+}
+
+.navbar-nav {
+  .nav-item {
+    .nav-link {
+      font-size: 13px;
+      color: $icon-color !important;
+    }
+  }
+}
+
 /* Navbar customization */
 .navbar {
   margin-bottom: inherit !important;
 }
+
+.search-form {
+  max-width: 370px;
+}
+
 
 .navbar-form {
   width: 40% !important;
@@ -14,22 +36,24 @@
   position: relative;
   .navbar-search-input {
     width: 100%;
-    border: solid 1px #cccccc;
-    background: #efefef;
+    border: solid 2px $boder-color;
+    background: $secondary-color;
     border-radius: 4px;
-    padding: 5px 40px 5px 15px;
+    padding: 6px 40px 6px 15px;
     outline: none;
+    font-size: 11px;
     &:hover {
       outline: none;
     }
   }
   &:before {
-    content: "\f002";
+    content: "\F002";
     font-family: 'FontAwesome';
-    top: 4px;
+    top: 6px;
     right: 10px;
     position: absolute;
-    color: #333333;
+    color: #3d3d3d;
+    font-size: 14px;
   }
 }
 
@@ -55,6 +79,32 @@
 /* Slider design */
 .carousel-inner {
   max-height: 450px;
+  .carousel-item {
+    position: relative;
+    .carousel-caption {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 35%;
+      h5 {
+        font-size: 25px;
+      }
+    }
+  }
+}
+
+.carousel-indicators {
+  li {
+    width: 10px !important;
+    height: 10px !important;
+    background-color: transparent !important;
+    border-radius: 50% !important;
+    border: 1px solid $white !important;
+  }
+  .active {
+    border: 1px solid #0fa458 !important;
+    background-color: $white !important;
+  }
 }
 
 /* Largest community */
@@ -80,11 +130,19 @@
   .item-img {
     float: left;
     margin-right: 20px;
+    img {
+      width: 52px;
+    }
   }
   .item-text {
     float: left;
     h4 {
       margin-bottom: 0;
+      font-size: 15px;
+      font-weight: bold;
+    }
+    p {
+      font-size: 13px;
     }
   }
 }
@@ -98,9 +156,23 @@
   .learn-anytime-row {
     .left-col {
       padding-left: 105px;
-      padding-top: 35px;
+      padding-top: 50px;
       padding-bottom: 35px;
       min-height: 310px;
+      h4 {
+        font-weight: bold;
+        color: #323232;
+        font-size: 22px;
+      }
+      h5 {
+        font-size: 16px;
+        color: #3e3e3e;
+      }
+      p {
+        color: #3e3e3e;
+        font-size: 13px;
+        line-height: 15px;
+      }
     }
     .right-col {
       min-height: 310px;
@@ -122,7 +194,18 @@
         background: $secondary-color;
         border: 1px solid #eee;
         padding-bottom: 25px;
-        box-shadow: 0 0 3px #cccccc;
+        -webkit-box-shadow: 0px 2px 3px #ddd;
+        -moz-box-shadow: 0px 2px 3px #ddd;
+        box-shadow: 0px 2px 3px #ddd;
+        box-shadow: 0px 2px 3px #ddd;
+        h2 {
+          font-size: 18px;
+          font-weight: bold;
+        }
+        p {
+          font-size: 14px;
+          color: #3e3e3e;
+        }
       }
     }
   }
@@ -135,7 +218,15 @@
     background: $white;
     box-shadow: 0px 0px 5px #cccccc;
     border-radius: 3px;
-    padding: 40px;
+    padding: 40px 200px;
+    h2 {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    p {
+      font-size: 14px;
+      color: #3e3e3e;
+    }
   }
 }
 
@@ -145,10 +236,19 @@
   background-repeat: no-repeat;
   background-position: center;
   color: #ffffff;
+  h2 {
+
+  }
+  p {
+    font-size: 14px;
+  }
 }
 
 #help-center-section {
   padding: 60px 75px;
+  p {
+    font-size: 14px;
+  }
 }
 
 #master-skill {
@@ -276,7 +376,8 @@ label {
             font-weight: bold;
           }
           p {
-            font-size: 14px;
+            font-size: 12px;
+            color: #3e3e3e;
           }
         }
         .get-to-know, .learn, .partner {
@@ -292,7 +393,7 @@ label {
               a {
                 display: inline-block;
                 cursor: pointer;
-                color: #aaaaaa;
+                color: #3e3e3e;
                 font-size: 12px;
                 margin-bottom: 10px;
                 &:hover {
@@ -373,6 +474,8 @@ label {
         }
         p {
           font-size: 14px;
+          color: #3e3e3e;
+          margin-bottom: 30px;
         }
         a {}
       }
@@ -406,11 +509,12 @@ label {
               .item-content {
                 padding-left: 55px;
                 h5 {
-                  font-size: 15px;
+                  font-size: 13px;
                   font-weight: bold;
                 }
                 p {
                   font-size: 13px;
+                  margin-bottom: 10px;
                 }
                 ul {
                   padding: 0;
@@ -422,7 +526,7 @@ label {
                   li {
                     border: inherit;
                     display: inline-block;
-                    margin-right: 15px;
+                    margin-right: 10px;
                     float: left;
                     padding: inherit;
                     a {
@@ -444,6 +548,7 @@ label {
           a {
             color: $primary-btn;
             cursor: pointer;
+            font-size: 14px;
             &:hover {
               text-decoration: underline;
             }
