--- a/resources/assets/sass/public.scss
+++ b/resources/assets/sass/public.scss
@@ -10,12 +10,22 @@
   font-size: 22px;
   text-transform: uppercase;
   margin-bottom: 15px;
+  color: #323232;
+}
+
+.primary-header-white {
+  font-weight: bold;
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  color: $white;
 }
 
 /* Button design for edutube */
 .primary-btn {
+  font-size: 13px !important;
+  padding: 4px 16px !important;
   color: $white !important;
-  font-weight: bold !important;
   background-color: $pink;
   border-bottom: 2px solid rgba(0, 0, 0, 0.25) !important;
   &:hover {
@@ -27,10 +37,11 @@
 }
 
 .default-btn {
+  font-size: 13px !important;
+  padding: 4px 16px !important;
   color: #333333 !important;
-  font-weight: bold !important;
   background-color: $secondary-color;
-  border-bottom: 2px solid rgba(200, 200, 200, 0.25) !important;
+  border-bottom: 2px solid #c7c7c7 !important;
   &:hover {
     color: #333333;
     cursor: pointer;
@@ -80,7 +91,8 @@
   min-height: 40px;
   display: inline-block;
   text-align: center;
-  line-height: 27px;
+  line-height: 28px !important;
+  font-size: 15px !important;
 }
 
 /* Search button */
@@ -90,19 +102,19 @@
     border-radius: 3px 0 0 3px;
     border: 0 none;
     outline: 0 none;
-    font-size: 15px;
+    font-size: 10px;
     border: 1px solid $boder-color;
     border-right: 0;
   }
   .group-btn {
     background-color: $pink;
-    border: 1px solid $pink;
+    border: inherit;
     border-radius: 0 3px 3px 0;
     color: $white;
-    padding: 1px 7px;
     text-decoration: none;
     cursor: pointer;
-    line-height: 23px;
+    font-size: 10px;
+    outline: none;
   }
 }
 
