--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -186,8 +186,8 @@
 /* Skill */
 .skill-item-wrap {
   .skill-row {
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 10%;
+    margin-right: 10%;
     .skill-col {
       .item {
         padding: 40px 25px;
@@ -205,6 +205,7 @@
         p {
           font-size: 14px;
           color: #3e3e3e;
+          min-height: 50px;
         }
       }
     }
@@ -253,6 +254,45 @@
 
 #master-skill {
   padding: 60px 75px;
+}
+
+#community-section {
+  border-top: solid 1px $secondary-color;
+  padding: 60px 75px;
+  .slider-items {
+    .slider-item {
+      padding: 20px 30px;
+    }
+  }
+  p {
+     font-size: 14px;
+     text-align: center;
+  }
+  .user-section {
+    border-radius: 30px;
+    background: $secondary-color;
+    text-align: center;
+    max-width: 210px;
+    padding: 5px 0;
+    overflow: hidden;
+    margin: auto;
+    .avatar {
+      width: 50px;
+      border-radius: 100%;
+      padding: 10px;
+      margin: 0 5px 0 10px;
+      float: left;
+      background: #ffffff;
+    } 
+    .information {
+      text-align: center;
+      font-size: 13px;
+      h4 {
+        margin-bottom: 4px;
+        font-size: 16px;
+      }
+    }
+  }
 }
 
 /* Login and registration modal and content design */
